tests/ui/suggestions/issue-84592.stderr
error[E0106]: missing lifetime specifiers
  --> $DIR/issue-84592.rs:12:57
   |
LL | fn two_lifetimes_needed(a: &(), b: &()) -> TwoLifetimes<'_, '_> {
   |                            ---     ---                  ^^  ^^ expected named lifetime parameter
   |                                                         |
   |                                                         expected named lifetime parameter
   |
   = help: this function's return type contains a borrowed value, but the signature does not say whether it is borrowed from `a` or `b`
help: consider introducing a named lifetime parameter
   |
LL - fn two_lifetimes_needed(a: &(), b: &()) -> TwoLifetimes<'_, '_> {
LL + fn two_lifetimes_needed<'a>(a: &'a (), b: &'a ()) -> TwoLifetimes<'a, 'a> {
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0106`.
